--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
         android:theme="@style/Theme.SuperheroMarvelInfo"
         tools:targetApi="31">
         <activity
-            android:name=".DetailSuperheroActivity"
+            android:name=".ui.detail.DetailSuperheroActivity"
             android:exported="false" />
         <activity
-            android:name=".SuperheroListActivity"
+            android:name=".ui.list.SuperheroListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
